deploy/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    networking.gke.io/managed-certificates: "studio-certificate"
    kubernetes.io/ingress.global-static-ip-name: "studio-production-ip"
  name: studio-ingress
spec:
  rules:
  - host: studio.bootifulpodcast.fm
    http:
      paths:
      - backend:
          serviceName: studio
          servicePort: 80
